[project]
name = "odoo-addons-oca-iot"
version = "17.0.20240913.0"
dependencies = [
    "odoo-addon-iot_input_oca>=17.0dev,<17.1dev",
    "odoo-addon-iot_oca>=17.0dev,<17.1dev",
    "odoo-addon-iot_output_oca>=17.0dev,<17.1dev",
    "odoo-addon-iot_template_oca>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
